swagger + refactor handlers
